# cgame_proxymod

./: .clang-format  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  cg_cvar.c  cg_entity_states.c  cg_filter_sounds.c  cg_gl_trace.c  cg_hud.c  cg_init.c  cg_local.h  cg_main.c  cg_rl_trace.c  cg_syscall.c  cg_timer_hud.c  cg_trigger_vis.c  nade_tracking.h  q_math.h  version.h.in
.github/workflows/: build.yml  build_all.yml  cmake.yml
include/: ExportImport.h  assert.h  bg_local.h  bg_public.h  cg_ammo.h  cg_cgaz.h  cg_consolecmds.h  cg_cvar.h  cg_draw.h  cg_entity.h  cg_file.h  cg_gl.h  cg_hud.h  cg_init.h  cg_jump.h  cg_local.h  cg_main.h  cg_public.h  cg_rl.h  cg_snap.h  cg_time.h  cg_timer.h  cg_trig.h  cg_utils.h  cg_vm.h  g_local.h  g_public.h  q_math.h  q_shared.h  surfaceflags.h  tr_types.h
src/: CMakeLists.txt  assert.h  bbox.c  bbox.h  bg_misc.c  bg_pmove.c  cg_ammo.c  cg_cgaz.c  cg_consolecmds.c  cg_cvar.c  cg_draw.c  cg_entity.c  cg_entity_states.c  cg_filter_sounds.c  cg_gl.c  cg_hud.c  cg_init.c  cg_jump.c  cg_main.c  cg_marks.c  cg_rl.c  cg_rl_trace.c  cg_snap.c  cg_syscall.c  cg_time.c  cg_timer.c  cg_trig.c  cg_trigger_vis.c  cg_utils.c  cg_view.c  cg_vm.c  compass.c  compass.h  defrag.c  defrag.h  g_missile.c  g_weapon.c  help.c  help.h  pitch.c  (+4 more)
test/: CMakeLists.txt  syscalls.cpp  syscalls.hpp  syscalls_client_fake.cpp  syscalls_client_fake.hpp  syscalls_cvar_fake.cpp  syscalls_cvar_fake.hpp  syscalls_fake.hpp  syscalls_mock.cpp  syscalls_mock.hpp
